--- a/linux/nc/nc.html
+++ b/linux/nc/nc.html
@@ -174,7 +174,7 @@
                 <main>
                     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.12.0/dist/katex.min.css" integrity="sha384-AfEj0r4/OFrOo5t7NnNe46zW/tFgW6x/bCJG8FqQCEo3+Aro6EYUG4+cU+KJWu/X" crossorigin="anonymous">
 <h2 id="nmap-netcatnc"><a class="header" href="#nmap-netcatnc">nmap-netcat(nc)</a></h2>
-<p><code>nc</code> 主要有 4 个版本，gnu nc （2004 年停止维护，也叫 nc traditional）， openbsd nc（重写了 gnu nc，在正常维护），nmap-netcat（也叫 ncat，由 nmap 重写 nc traditional，被称为 21 世纪的 netcat，也是功能最多的 nc）。</p>
+<p>nc 是由 C 编写的非常强悍的网络工具，<code>nc</code> 主要有 4 个版本，gnu nc （2004 年停止维护，也叫 nc traditional）， openbsd nc（重写了 gnu nc，在正常维护），nmap-netcat（也叫 ncat，由 nmap 重写 nc traditional，被称为 21 世纪的 netcat，也是功能最多的 nc）。</p>
 <p>下面我介绍的就是 nmap-netcat。</p>
 <h2 id="安装"><a class="header" href="#安装">安装</a></h2>
 <p>https://nmap.org/download ，ncat 集成在 nmap 中，可以通过安装 nmap 获取 ncat 。</p>
@@ -197,6 +197,7 @@ ncat -lvp 1589
 <pre><code class="language-zsh"># 唯一跟上面不同的就是这次监听的是 udp 。
 ncat -lvup 1589
 </code></pre>
+<p>可以按 <a href="https://m4n5ter.github.io/linux/mkcert/mkcert.html">mkcert</a> 生成自签证书。</p>
 <pre><code class="language-zsh"># 使用 ssl 来加密通信（否则是明文的，统一网络的人可以轻松嗅探到传输内容）
 # --ssl-key，--ssl-cert 可以手动指定证书，--ssl 是生成并使用一个临时证书
 ncat --ssl -lvp 1589
