--- a/linux/nc/nc.html
+++ b/linux/nc/nc.html
@@ -257,6 +257,8 @@ nc -lp 6666 -e /bin/bash
 <p>限制可以连接到 <code>ncat</code>（<code>nc</code>） 的 hosts，可以指定一些 IP，来做到只允许指定目标连接。</p>
 <h3 id="--deny----denyfile"><a class="header" href="#--deny----denyfile"><code>--deny</code> / <code>--denyfile</code></a></h3>
 <p>与上面的相反，它是拒绝。</p>
+<h2 id="更多功能请自行探索"><a class="header" href="#更多功能请自行探索">更多功能请自行探索</a></h2>
+<p><code>ncat</code> 提供了许多功能，这些功能可以相互组合，或者配合其它东西来使用，能玩出的花样是非常多的。</p>
 
                     <div id="giscus-container"></div>
                 </main>
