deploy: bfc314b69f906602832a2284b1fc4bebf1995df5

--- a/blockchain/blockchain.html
+++ b/blockchain/blockchain.html
@@ -198,7 +198,7 @@
 <p>用于为区块生成哈希摘要（hash digests）以及签名和验证与交易关联的签名的密码学。</p>
 </li>
 </ul>
-<p>由于构建区块链所需的核心组件所涉及的复杂性，大多数区块链项目从现有区块链代码库 fork 一个副本，以便开发人员可以修改现有代码以添加新功能，而不是从头开始编写所有内容。例如，Bitcoin 仓库被 fork 以创建 Litecoin、ZCash、Namecoin 和 Bitcoin Cash。类似地，Ethereum 被 form 以创建 Quorum、POA Network、KodakCoin 和 Musicoin。</p>
+<p>由于构建区块链所需的核心组件所涉及的复杂性，大多数区块链项目从现有区块链代码库 fork 一个副本，以便开发人员可以修改现有代码以添加新功能，而不是从头开始编写所有内容。例如，Bitcoin 仓库被 fork 以创建 Litecoin、ZCash、Namecoin 和 Bitcoin Cash。类似地，Ethereum 被 fork 以创建 Quorum、POA Network、KodakCoin 和 Musicoin。</p>
 <p>然而，大多数区块链平台的设计并不允许修改或定制。因此，通过 fork 来构建新的区块链有严重的限制，包括原来的区块链代码中固有的限制，比如可扩展性。</p>
 <p>我们将会先了解大多数区块链共享的一些共同属性。</p>
 <h2 id="状态的转换和冲突"><a class="header" href="#状态的转换和冲突">状态的转换和冲突</a></h2>
