--- a/blockchain/substrate/substrate.html
+++ b/blockchain/substrate/substrate.html
@@ -174,6 +174,7 @@
                 <main>
                     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.12.0/dist/katex.min.css" integrity="sha384-AfEj0r4/OFrOo5t7NnNe46zW/tFgW6x/bCJG8FqQCEo3+Aro6EYUG4+cU+KJWu/X" crossorigin="anonymous">
 <h1 id="substrate"><a class="header" href="#substrate">substrate</a></h1>
+<p>正在阅读学习 substrate 需要的前置知识。</p>
 
                     <div id="giscus-container"></div>
                 </main>
