deploy: 19620a1339c7495dfa1947abe98d22e88db35183

--- a/linux/postgres/postgres.html
+++ b/linux/postgres/postgres.html
@@ -176,7 +176,7 @@
 <h1 id="postgres"><a class="header" href="#postgres">Postgres</a></h1>
 <h2 id="利用-docker-快速在-当前工作目录pwd-启动一个本地-postgres-环境"><a class="header" href="#利用-docker-快速在-当前工作目录pwd-启动一个本地-postgres-环境">利用 Docker 快速在 <strong>当前工作目录(<code>pwd</code>)</strong> 启动一个本地 postgres 环境</a></h2>
 <p>使用 alpine based image，并且挂载了 unix socket。</p>
-<pre><code class="language-bash">docker run -d \
+<pre><code class="language-bash">$ docker run -d \
 -v `pwd`/conf/:/etc/postgresql/postgresql.conf \
 -v `pwd`/data:/var/lib/postgresql/data \
 -v /var/run/postgresql:/var/run/postgresql \
@@ -188,16 +188,16 @@
 postgres:15-alpine
 </code></pre>
 <h2 id="使用-pgcli-来获得拥有更友好的客户端"><a class="header" href="#使用-pgcli-来获得拥有更友好的客户端">使用 <code>pgcli</code> 来获得拥有更友好的客户端</a></h2>
-<pre><code class="language-bash"> sudo pacman -S pgcli
+<pre><code class="language-bash">$ sudo pacman -S pgcli
 # -or-
- sudo apt-get install pgcli
+$ sudo apt-get install pgcli
 # -or-
- brew install pgcli
+$ brew install pgcli
 # -or-
- pip install -U pgcli
+$ pip install -U pgcli
 </code></pre>
 <h3 id="默认启动直接通过-unix-socket-连接-postgres"><a class="header" href="#默认启动直接通过-unix-socket-连接-postgres">默认启动直接通过 unix socket 连接 postgres</a></h3>
-<pre><code class="language-bash"> pgcli
+<pre><code class="language-bash">$ pgcli
 Server: PostgreSQL 15.1
 Version: 3.5.0
 Home: http://pgcli.com
