--- a/print.html
+++ b/print.html
@@ -4577,6 +4577,10 @@ Home: http://pgcli.com
 m4n5ter&gt; exit
 Goodbye!
 </code></pre>
+<h3 id="linux-navicat-reset"><a class="header" href="#linux-navicat-reset">linux navicat reset</a></h3>
+<p>下面的方法不会丢失已经存在连接(Navicat 16 Premium)：</p>
+<pre><code class="language-bash">$ dconf reset -f &quot;/com/premiumsoft/navicat-premium/&quot; &amp;&amp; rm -Rf ~/.config/navicat/Premium/preferences.json*
+</code></pre>
 <h2 id="links"><a class="header" href="#links">Links</a></h2>
 <ul>
 <li><a href="https://www.postgresql.org/docs/current">Postgres Current Version Document</a></li>
