deploy: 67a840627f7525ba44c25721ead2d89f18f8098c

--- a/print.html
+++ b/print.html
@@ -4552,7 +4552,7 @@ sudo systemctl enable --now aria2
 <pre><code class="language-bash">$ mkdir conf
 $ docker run -i --rm postgres:15-alpine cat /usr/local/share/postgresql/postgresql.conf.sample &gt; conf/postgresql.conf
 $ docker run -d \
--v `pwd`/conf/:/etc/postgresql/postgresql.conf \
+-v `pwd`/conf/postgresql.conf:/etc/postgresql/postgresql.conf \
 -v `pwd`/data:/var/lib/postgresql/data \
 -v /var/run/postgresql:/var/run/postgresql \
 -p 5432:5432 \
@@ -4560,7 +4560,7 @@ $ docker run -d \
 -e LANG=zh_CN.utf8 \
 -e POSTGRES_INITDB_ARGS=&quot;--locale-provider=icu --icu-locale=zh-CN&quot; \
 -e POSTGRES_PASSWORD=&lt;YOUR PASSWORD&gt; \
-postgres:15-alpine
+postgres:15-alpine -c 'config_file=/etc/postgresql/postgresql.conf'
 </code></pre>
 <h2 id="使用-pgcli-来获得拥有更友好的客户端"><a class="header" href="#使用-pgcli-来获得拥有更友好的客户端">使用 <code>pgcli</code> 来获得拥有更友好的客户端</a></h2>
 <pre><code class="language-bash">$ sudo pacman -S pgcli
